--- a/settings.yaml
+++ b/settings.yaml
@@ -10,10 +10,10 @@ logger:
   level: info # 日志级别
   prefix: "[gvb]" # 日志前缀
   director: log # 日志文件夹
-  show-line: true # 显示行号
-  log-in-console: true # 是否显示打印路径
+  show_line: true # 显示行号
+  log_in_console: true # 是否显示打印路径
 
 system:
   host: "0.0.0.0"
   port: 8080
-  env: dev
+  env: debug
