--- a/settings.yaml
+++ b/settings.yaml
@@ -5,15 +5,31 @@ mysql:
   user: root
   password: qq123123
   log_level: dev
-
+  config: ""
 logger:
-  level: info # 日志级别
-  prefix: "[gvb]" # 日志前缀
-  director: log # 日志文件夹
-  show_line: true # 显示行号
-  log_in_console: true # 是否显示打印路径
-
+  level: info
+  prefix: '[gvb]'
+  director: log
+  show_line: true
+  log_in_console: true
 system:
-  host: "0.0.0.0"
+  host: 0.0.0.0
   port: 4000
   env: release
+site_info:
+  created_at: "2023-02-12"
+  filing: 湘ICP备xxxxx号
+  title: 个人博客
+  qq_image: https://avatars.githubusercontent.com/u/9919?s=80&v=4
+  version: 0.0.1
+  email: kexin@korix.com
+  wechat_image: https://avatars.githubusercontent.com/u/9919?s=80&v=4
+  name: KORIX
+  job: FE
+  addr: Earth
+  slogan: ""
+  slogan_en: ~~
+  web: https://github.com/Kori000
+  bilibili_url: https://github.com/Kori000
+  gitee_url: https://github.com/Kori000
+  github_urt: https://github.com/Kori000
