--- a/settings.yaml
+++ b/settings.yaml
@@ -8,7 +8,7 @@ mysql:
   config: ""
 logger:
   level: info
-  prefix: '[gvb]'
+  prefix: "[gvb]"
   director: log
   show_line: true
   log_in_console: true
@@ -16,6 +16,29 @@ system:
   host: 0.0.0.0
   port: 4000
   env: release
+qq:
+  app_id: ""
+  key: ""
+  redirect: ""
+email:
+  host: ""
+  port: ""
+  user: ""
+  password: ""
+  default_from_email: ""
+  use_ssl: ""
+  user_tls: ""
+qi_niu:
+  access_key: ""
+  ecret_key: ""
+  ucket: ""
+  dn: ""
+  one: ""
+  ize: ""
+jwt:
+  secret: ""
+  expires: ""
+  issuer: ""
 site_info:
   created_at: "2023-02-12"
   filing: 湘ICP备xxxxx号
@@ -27,7 +50,7 @@ site_info:
   name: KORIX
   job: FE
   addr: Earth
-  slogan: ""
+  slogan: "~"
   slogan_en: ~~
   web: https://github.com/Kori000
   bilibili_url: https://github.com/Kori000
