--- a/settings.yaml
+++ b/settings.yaml
@@ -8,7 +8,7 @@ mysql:
   config: ""
 logger:
   level: info
-  prefix: "[gvb]"
+  prefix: '[gvb]'
   director: log
   show_line: true
   log_in_console: true
@@ -16,29 +16,6 @@ system:
   host: 0.0.0.0
   port: 4000
   env: release
-qq:
-  app_id: ""
-  key: ""
-  redirect: ""
-email:
-  host: ""
-  port: ""
-  user: ""
-  password: ""
-  default_from_email: ""
-  use_ssl: ""
-  user_tls: ""
-qi_niu:
-  access_key: ""
-  ecret_key: ""
-  ucket: ""
-  dn: ""
-  one: ""
-  ize: ""
-jwt:
-  secret: ""
-  expires: ""
-  issuer: ""
 site_info:
   created_at: "2023-02-12"
   filing: 湘ICP备xxxxx号
@@ -56,3 +33,26 @@ site_info:
   bilibili_url: https://github.com/Kori000
   gitee_url: https://github.com/Kori000
   github_urt: https://github.com/Kori000
+qq:
+  app_id: "123"
+  key: "123"
+  redirect: "123"
+email:
+  host: "1"
+  port: 0
+  user: "23"
+  password: "23"
+  default_from_email: "23"
+  use_ssl: false
+  user_tls: false
+qiniu:
+  access_key: "123"
+  secret_key: "123"
+  bucket: "123"
+  cdn: "123"
+  zone: "213"
+  size: 0
+jwt:
+  secret: "213"
+  expires: 0
+  issuer: "213"
