--- a/settings.yaml
+++ b/settings.yaml
@@ -8,7 +8,7 @@ mysql:
   config: ""
 logger:
   level: info
-  prefix: '[gvb]'
+  prefix: "[gvb]"
   director: log
   show_line: true
   log_in_console: true
@@ -46,6 +46,7 @@ email:
   use_ssl: false
   user_tls: false
 qiniu:
+  enable: false
   access_key: "123"
   secret_key: "123"
   bucket: "123"
