--- a/settings.yaml
+++ b/settings.yaml
@@ -16,6 +16,11 @@ system:
   host: 0.0.0.0
   port: 4000
   env: release
+upload:
+  size: 5
+  image_path: "uploads/images"
+  file_path: "uploads/files"
+  audio_path: "uploads/audios"
 site_info:
   created_at: "2023-02-12"
   filing: 湘ICP备xxxxx号
