--- a/settings.yaml
+++ b/settings.yaml
@@ -5,7 +5,7 @@ mysql:
   user: root
   password: qq123123
   log_level: dev
-  config: ""
+  config: "charset=utf8mb4&parseTime=True&loc=Local"
 logger:
   level: info
   prefix: "[gvb]"
