--- a/settings.yaml
+++ b/settings.yaml
@@ -5,10 +5,10 @@ mysql:
   user: root
   password: qq123123
   log_level: dev
-  config: "charset=utf8mb4&parseTime=True&loc=Local"
+  config: charset=utf8mb4&parseTime=True&loc=Local
 logger:
   level: info
-  prefix: "[gvb]"
+  prefix: '[gvb]'
   director: log
   show_line: true
   log_in_console: true
@@ -18,9 +18,9 @@ system:
   env: release
 upload:
   size: 5
-  image_path: "uploads/images"
-  file_path: "uploads/files"
-  audio_path: "uploads/audios"
+  image_path: uploads/images
+  file_path: uploads/files
+  audio_path: uploads/audios
 site_info:
   created_at: "2023-02-12"
   filing: 湘ICP备xxxxx号
@@ -52,9 +52,9 @@ email:
   user_tls: false
 qiniu:
   enable: true
-  access_key: "DSiVMvhK1idyOSeVpu4XBu0WR5vDKjNjosvGGGsA"
-  secret_key: "oDJjQW4psIwzUvA4q-XyVSs1kBrrXtzlPWE5HeAR"
-  bucket: "kori-foreign"
+  access_key: DSiVMvhK1idyOSeVpu4XBu0WR5vDKjNjosvGGGsA
+  secret_key: oDJjQW4psIwzUvA4q-XyVSs1kBrrXtzlPWE5HeAR
+  bucket: kori-foreign
   cdn: "123"
   zone: "213"
   size: 0
